--- a/Initializer/.project
+++ b/Initializer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CSC131 Project</name>
+	<name>Initializer</name>
 	<comment></comment>
 	<projects>
 	</projects>
