--- a/MovieAPI/.classpath
+++ b/MovieAPI/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/json-20201115.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/mssql-jdbc-8.4.1.jre11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
