--- a/MovieAPI/.project
+++ b/MovieAPI/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MovieAPI</name>
+	<name>AwardsAPI</name>
 	<comment></comment>
 	<projects>
 	</projects>
